parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@lists.py-11.snap
---
source: parser/src/lexer/mod.rs
description: "[a for a in b for c in d]"
input_file: parser/test_data/inputs/one_liners/lists.py
---
[
    Token {
        kind: LeftBrace,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 1,
        end: 2,
    },
    Token {
        kind: For,
        value: None,
        start: 3,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 7,
        end: 8,
    },
    Token {
        kind: In,
        value: None,
        start: 9,
        end: 11,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 12,
        end: 13,
    },
    Token {
        kind: For,
        value: None,
        start: 14,
        end: 17,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 18,
        end: 19,
    },
    Token {
        kind: In,
        value: None,
        start: 20,
        end: 22,
    },
    Token {
        kind: Identifier,
        value: Str(
            "d",
        ),
        start: 23,
        end: 24,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 24,
        end: 25,
    },
]
