parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@lists.py-12.snap
---
source: parser/src/lexer/lexer.rs
description: "[a for a in b if c for d in e]\n"
input_file: parser/test_data/inputs/one_liners/lists.py
---
[
    Token {
        kind: LeftBrace,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 1,
        end: 2,
    },
    Token {
        kind: For,
        value: None,
        start: 3,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 7,
        end: 8,
    },
    Token {
        kind: In,
        value: None,
        start: 9,
        end: 11,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 12,
        end: 13,
    },
    Token {
        kind: If,
        value: None,
        start: 14,
        end: 16,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 17,
        end: 18,
    },
    Token {
        kind: For,
        value: None,
        start: 19,
        end: 22,
    },
    Token {
        kind: Identifier,
        value: Str(
            "d",
        ),
        start: 23,
        end: 24,
    },
    Token {
        kind: In,
        value: None,
        start: 25,
        end: 27,
    },
    Token {
        kind: Identifier,
        value: Str(
            "e",
        ),
        start: 28,
        end: 29,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 29,
        end: 30,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 30,
        end: 31,
    },
]
