parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@lists.py-5.snap
---
source: parser/src/lexer/lexer.rs
description: "[a,\n],"
input_file: parser/test_data/inputs/one_liners/lists.py
---
[
    Token {
        kind: LeftBrace,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 1,
        end: 2,
    },
    Token {
        kind: Comma,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 4,
        end: 5,
    },
    Token {
        kind: Comma,
        value: None,
        start: 5,
        end: 6,
    },
]
