parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@lists.py-7.snap
---
source: parser/src/lexer/lexer.rs
description: "month_names = ['Januari', 'Februari', 'Maart',      # These are the\n   'April',   'Mei',      'Juni',       # Dutch names\n   'Juli',    'Augustus', 'September',  # for the months\n   'Oktober', 'November', 'December']   # of the year,"
input_file: parser/test_data/inputs/one_liners/lists.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "month_names",
        ),
        start: 0,
        end: 11,
    },
    Token {
        kind: Assign,
        value: None,
        start: 12,
        end: 13,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 14,
        end: 15,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'Januari'",
        ),
        start: 15,
        end: 24,
    },
    Token {
        kind: Comma,
        value: None,
        start: 24,
        end: 25,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'Februari'",
        ),
        start: 26,
        end: 36,
    },
    Token {
        kind: Comma,
        value: None,
        start: 36,
        end: 37,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'Maart'",
        ),
        start: 38,
        end: 45,
    },
    Token {
        kind: Comma,
        value: None,
        start: 45,
        end: 46,
    },
    Token {
        kind: Comment,
        value: Str(
            "# These are the",
        ),
        start: 52,
        end: 67,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'April'",
        ),
        start: 71,
        end: 78,
    },
    Token {
        kind: Comma,
        value: None,
        start: 78,
        end: 79,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'Mei'",
        ),
        start: 82,
        end: 87,
    },
    Token {
        kind: Comma,
        value: None,
        start: 87,
        end: 88,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'Juni'",
        ),
        start: 94,
        end: 100,
    },
    Token {
        kind: Comma,
        value: None,
        start: 100,
        end: 101,
    },
    Token {
        kind: Comment,
        value: Str(
            "# Dutch names",
        ),
        start: 108,
        end: 121,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'Juli'",
        ),
        start: 125,
        end: 131,
    },
    Token {
        kind: Comma,
        value: None,
        start: 131,
        end: 132,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'Augustus'",
        ),
        start: 136,
        end: 146,
    },
    Token {
        kind: Comma,
        value: None,
        start: 146,
        end: 147,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'September'",
        ),
        start: 148,
        end: 159,
    },
    Token {
        kind: Comma,
        value: None,
        start: 159,
        end: 160,
    },
    Token {
        kind: Comment,
        value: Str(
            "# for the months",
        ),
        start: 162,
        end: 178,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'Oktober'",
        ),
        start: 182,
        end: 191,
    },
    Token {
        kind: Comma,
        value: None,
        start: 191,
        end: 192,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'November'",
        ),
        start: 193,
        end: 203,
    },
    Token {
        kind: Comma,
        value: None,
        start: 203,
        end: 204,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'December'",
        ),
        start: 205,
        end: 215,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 215,
        end: 216,
    },
    Token {
        kind: Comment,
        value: Str(
            "# of the year,",
        ),
        start: 219,
        end: 233,
    },
]
