parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@lists.py.snap
---
source: parser/src/lexer/lexer.rs
description: "\n[a, b, c]"
input_file: parser/test_data/inputs/one_liners/lists.py
---
[
    Token {
        kind: NewLine,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 1,
        end: 2,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 2,
        end: 3,
    },
    Token {
        kind: Comma,
        value: None,
        start: 3,
        end: 4,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 5,
        end: 6,
    },
    Token {
        kind: Comma,
        value: None,
        start: 6,
        end: 7,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 8,
        end: 9,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 9,
        end: 10,
    },
]
